--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -8,7 +8,7 @@ on:
 env:
   AWS_REGION: us-east-1 # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: ecs-demo-example # set this to your Amazon ECR repository name
-  ECS_SERVICE: sv-ecs-demo-example-v2 # set this to your Amazon ECS service name
+  ECS_SERVICE: sv-V10 # set this to your Amazon ECS service name
   ECS_CLUSTER: cluster-ecs-demo-example # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
   CONTAINER_NAME:
