--- a/.github/workflows/ecs-deploy.yml
+++ b/.github/workflows/ecs-deploy.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Describe task-definition
         run: |
           aws ecs describe-task-definition \
-          --task-definition ${{ env.ECR_REPOSITORY }} \
+          --task-definition ${{ env.TASK_DEFINITION }} \
           --query taskDefinition > task-definition.json
 
       - name: Build, tag, and push image to Amazon ECR
